fix layout.css, prevent overflow and reduce size of the main container (#227)

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -100,7 +100,7 @@ hr {
 }
 
 .mainContainer .main {
-    width: 1500px;
+    width: 1200px;
     max-width: 100%;
 }
 
